fix: core cds-text="truncate" is cutting letter descenders
- the final solution will be to use leading-trim once it's available in all browsers
- the current solution is to disable the erases, which can have effect on alignment, but the drawbacks are smaller than having truncated and unreadable texts

Fixes: #5708

--- a/packages/core/src/styles/typography/_typography.scss
+++ b/packages/core/src/styles/typography/_typography.scss
@@ -261,6 +261,7 @@
   overflow: hidden !important;
   text-overflow: ellipsis !important;
   white-space: nowrap !important;
+  @include remove-line-height-erasers;
 }
 
 // alignment
